--- a/mobile/src/main/res/layout/fragment_control_scheme.xml
+++ b/mobile/src/main/res/layout/fragment_control_scheme.xml
@@ -69,9 +69,11 @@
         android:id="@+id/seek_prec_sett1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
         android:progress="0"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toEndOf="@+id/txt_prec_sett1"
         app:layout_constraintTop_toBottomOf="@+id/txt_prec_setts"/>
 
@@ -167,5 +169,12 @@
         android:text="@string/go"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/chk_sett3"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="192dp"/>
 
 </android.support.constraint.ConstraintLayout>
