--- a/mobile/src/main/res/layout/activity_hub.xml
+++ b/mobile/src/main/res/layout/activity_hub.xml
@@ -68,12 +68,13 @@
         app:layout_constraintVertical_bias="0.0"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txt_dev_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/development_info"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
