--- a/mobile/src/main/res/layout/activity_devbt.xml
+++ b/mobile/src/main/res/layout/activity_devbt.xml
@@ -7,55 +7,60 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/devbt_txt_devices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="Available devices"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/devbt_spin_devices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintStart_toStartOf="@+id/devbt_txt_devices"
+        app:layout_constraintTop_toBottomOf="@+id/devbt_txt_devices"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/devbt_button_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:text="Connect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        app:layout_constraintTop_toBottomOf="@+id/devbt_txt_enlight"/>
 
     <RadioButton
-        android:id="@+id/radioButton"
+        android:id="@+id/devbt_radio_enlight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:checked="false"
         android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/button"/>
+        app:layout_constraintBottom_toBottomOf="@+id/devbt_button_connect"
+        app:layout_constraintEnd_toEndOf="@+id/devbt_txt_enlight"
+        app:layout_constraintStart_toStartOf="@+id/devbt_txt_enlight"
+        app:layout_constraintTop_toTopOf="@+id/devbt_button_connect"/>
 
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        android:editable="true"
+        android:hint="send msg"
+        android:inputType="text"
+        android:singleLine="true"
+        app:layout_constraintBottom_toBottomOf="@+id/devbt_button_write"
+        app:layout_constraintEnd_toStartOf="@+id/devbt_button_write"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/button3"/>
+        app:layout_constraintTop_toTopOf="@+id/devbt_button_write"
+        tools:textAlignment="center"/>
 
     <EditText
         android:id="@+id/editText"
@@ -63,19 +68,23 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button4"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        android:editable="false"
+        android:hint="read msg"
+        android:inputType="none"
+        app:layout_constraintBottom_toBottomOf="@+id/dev_button_write"
+        app:layout_constraintEnd_toStartOf="@+id/dev_button_write"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/button4"/>
+        app:layout_constraintTop_toTopOf="@+id/dev_button_write"
+        tools:textAlignment="center"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/devbt_button_write"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button4"/>
+        android:text="Write"
+        app:layout_constraintEnd_toEndOf="@+id/devbt_button_connect"
+        app:layout_constraintTop_toBottomOf="@+id/dev_button_write"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
@@ -85,21 +94,21 @@
         app:layout_constraintGuide_begin="114dp"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/dev_button_write"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"/>
+        android:text="Read"
+        app:layout_constraintEnd_toEndOf="@+id/devbt_button_connect"
+        app:layout_constraintTop_toBottomOf="@+id/devbt_button_connect"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/devbt_txt_enlight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         android:text="Enabled"
-        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/devbt_button_connect"
         app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
