--- a/mobile/src/main/res/layout/activity_hub.xml
+++ b/mobile/src/main/res/layout/activity_hub.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/hub_title_desc"
         android:scaleType="fitCenter"
         android:src="@drawable/title"
@@ -26,13 +26,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginStart="128dp"
         android:layout_marginTop="8dp"
         android:text="@string/button_connect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_dev"
+        app:layout_constraintStart_toStartOf="@+id/btn_dev"
         app:layout_constraintTop_toBottomOf="@+id/hub_title"
         app:layout_constraintVertical_bias="0.19999999"/>
 
@@ -41,23 +39,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginStart="128dp"
         android:layout_marginTop="16dp"
         android:text="@string/button_help"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_dev"
+        app:layout_constraintStart_toStartOf="@+id/btn_dev"
         app:layout_constraintTop_toBottomOf="@+id/btn_connect"
         app:layout_constraintVertical_bias="0.0"/>
 
     <Button
         android:id="@+id/btn_dev"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginStart="128dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="16dp"
         android:text="@string/button_dev"
         android:visibility="invisible"
