--- a/mobile/src/main/res/layout/fragment_control_scheme.xml
+++ b/mobile/src/main/res/layout/fragment_control_scheme.xml
@@ -6,115 +6,101 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="368dp"
-        android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:background="?android:attr/listDivider"
+
+    <Button
+        android:id="@+id/cs_btn_go"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/go"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13999999"/>
-
-
-    <Button
-        android:id="@+id/btn_go"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/go"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton6"/>
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="192dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/cs_rg_auto"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/cs_txt_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="AutoCaddy Follow Behavior"
+        android:layout_marginTop="64dp"
+        android:text="AutoCaddy Speed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/cs_txt_auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="AutoCaddy Speed"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/divider"/>
+        android:layout_marginTop="32dp"
+        android:text="AutoCaddy Follow Behavior"
+        app:layout_constraintEnd_toEndOf="@+id/cs_txt_speed"
+        app:layout_constraintStart_toStartOf="@+id/cs_txt_speed"
+        app:layout_constraintTop_toBottomOf="@+id/cs_rg_speed"/>
 
-    <RadioButton
-        android:id="@+id/radioButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RadioGroup
+        android:id="@+id/cs_rg_speed"
+        android:layout_width="99dp"
+        android:layout_height="122dp"
         android:layout_marginTop="8dp"
-        android:text="Fast"
-        app:layout_constraintEnd_toEndOf="@+id/radioButton2"
-        app:layout_constraintStart_toStartOf="@+id/radioButton2"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton3"/>
+        app:layout_constraintEnd_toEndOf="@+id/cs_txt_speed"
+        app:layout_constraintStart_toStartOf="@+id/cs_txt_speed"
+        app:layout_constraintTop_toBottomOf="@+id/cs_txt_speed">
 
-    <RadioButton
-        android:id="@+id/radioButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Medium"
-        app:layout_constraintStart_toStartOf="@+id/radioButton2"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton2"/>
+        <RadioButton
+            android:id="@+id/cs_rb_slow"
+            android:layout_width="116dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="8dp"
+            android:text="Slow"/>
 
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Slow"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+        <RadioButton
+            android:id="@+id/cs_rb_medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Medium"/>
 
-    <RadioButton
-        android:id="@+id/radioButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Go To Holes"
-        app:layout_constraintStart_toStartOf="@+id/radioButton2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+        <RadioButton
+            android:id="@+id/cs_rb_fast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Fast"/>
 
-    <RadioButton
-        android:id="@+id/radioButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Wait at Goals"
-        app:layout_constraintStart_toStartOf="@+id/radioButton4"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton4"/>
+    </RadioGroup>
 
-    <RadioButton
-        android:id="@+id/radioButton6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RadioGroup
+        android:id="@+id/cs_rg_auto"
+        android:layout_width="124dp"
+        android:layout_height="81dp"
         android:layout_marginTop="8dp"
-        android:text="Follow Me"
-        app:layout_constraintStart_toStartOf="@+id/radioButton5"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton5"/>
+        app:layout_constraintEnd_toEndOf="@+id/cs_rg_speed"
+        app:layout_constraintStart_toStartOf="@+id/cs_rg_speed"
+        app:layout_constraintTop_toBottomOf="@+id/cs_txt_auto">
+
+        <RadioButton
+            android:id="@+id/cs_rb_holes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Go To Holes"/>
+
+        <RadioButton
+            android:id="@+id/cs_rb_follow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Follow Me"/>
+
+    </RadioGroup>
+
+
 
 </android.support.constraint.ConstraintLayout>
